fixing the spacing issues and html issues on the overview page. there was an unclosed p tag and a stray close div tag. also fixed some css errors that got introduced somehow. overview looking a lot better now.

--- a/fedoracommunity/public/css/application-chrome.css
+++ b/fedoracommunity/public/css/application-chrome.css
@@ -880,7 +880,7 @@ div.login a.small-text:visited {
 .canvas .login {
   margin-left: auto;
   margin-right: auto;
-  //position: absolute;
+  /* position: absolute; */
   width: 300px;
   overflow: visible;
 }
@@ -1744,3 +1744,53 @@ word-break: break-all; /* for IE and friends */
 #grid-controls #pager {
   display: none;
 }
+
+/* package overview */
+
+#package-details #package-overview {
+  color: #444;
+  font-size: .85em;
+}
+
+#package-details #package-overview h3 {
+  color: #666;
+  font-size: 1em;
+  margin-bottom: .85em;
+  margin-top: 1em;
+}
+
+#package-details #package-overview h4 {
+  color: #999;
+  font-size: .85em;
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
+
+table#active-releases {
+  width: 90%;
+}
+
+table#active-releases th {
+  background-color: #f5f5f5;
+  padding: 3px 7px;
+  font-weight: bold;
+  font-size: .8em;
+  color: #666;
+}
+
+table#active-releases td {
+  padding: 3px 7px;
+  border-bottom: 2px solid #eee;
+  font-size: .9em;
+  color: #808080;
+}
+
+table#active-releases a {
+  text-decoration: none;
+}
+
+table#active-releases td.release {
+  font-weight: bold;
+}
+
+
