--- a/fedoracommunity/public/css/fedora.css
+++ b/fedoracommunity/public/css/fedora.css
@@ -197,7 +197,7 @@ table {
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -pre-wrap;
-  white-space: -o-pre-wrap:
+ /* white-space: -o-pre-wrap: */
   word-wrap: break-word;
 }
 
